cabal-version:      2.4
name:               hs-dtw
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Haskell implementation of DTW algorithms. Based on code from github.com:kirel/detexify-hs-backend

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ofsouzap
maintainer:         ofsouzap@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

executable hs-dtw
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, Dtw
    hs-source-dirs:   app
    default-language: Haskell2010

library Dtw
    exposed-modules:  Dtw
    hs-source-dirs:   Dtw
    other-modules:    DtwMath
    build-depends:    base >=4.16.4.0, array ^>= 0.5.4.0
    default-language: Haskell2010
